# django-template

./: docker-compose.yml  pyproject.toml
app/core/: exceptions.py  filters.py  forms.py  models.py  serializers.py  types.py  utils.py  views.py
app/users/: forms.py  managers.py  models.py  services.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
config/: urls.py
config/settings/: base.py  development.py  production.py
notebooks/: serializers_errors.ipynb
templates/cotton_components/input/: primary.html
tests/: conftest.py
tests/core/: test_filters.py
tests/core/views/: test_api_view.py
tests/users/views/: test_user_create_view.py
